# antigrav

./: .gitignore  CMakeLists.txt  README.md  attacks.cpp  attacks.h  bitboard  bitboard.cpp  bitboard.h  download_assets.sh  mate2.cpp  movegen.cpp  movegen.h  perft.cpp  test_fen.cpp  test_leaper.cpp  test_movegen.cpp  test_parens  test_values.cpp
scripts/: bundle_assets.py
